export interface Chair {
  showOffer(): string;
}
